# search-gwas

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: post-release.yaml  rust.yaml
src/: cli.rs  consts.rs  data.rs  files.rs  main.rs  query.rs
