[package]
name = "search-gwas"
version = "0.0.1"
edition = "2021"
description = "Search the GWAS Catalog for associations"
license = "MIT"
repository = "https://github.com/mrvillage/search-gwas"

[dependencies]
chrono = { version = "0.4.38", features = ["rkyv"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
dialoguer = { version = "0.11.0", features = [
  "editor",
  "fuzzy-select",
  "history",
  "completion",
] }
dirs = "5.0.1"
env_logger = "0.11.3"
flate2 = "1.0.30"
log = "0.4.21"
prettytable = "0.10.0"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = { version = "0.12.4", features = ["blocking"] }
rkyv = { version = "0.7.44", features = ["archive_le"] }
roxmltree = "0.19.0"
serde = { version = "1.0.203", features = ["derive"] }
